# srs-challenge

./: .env-sample  .gitignore  Makefile  README  docker-compose.yaml  pyproject.toml
app/: constants.py  log.py  main.py  startup.py
app/alembic/: env.py
app/alembic/versions/: 571aa5a05bc0_create_tables.py  9aa8eaa58d12_create_producers_tables.py  d0fdf1828b15_create_tables.py
app/controllers/: crops_controller.py  farms_controller.py  producers_controller.py
app/helpers/: exception.py  validation.py
app/helpers/aws/: secrets_manager.py
app/models/: addresses_model.py  addresses_producers.py  basics.py  companies_model.py  crops_model.py  db.py  farms_model.py  farms_producers_model.py  harvests_model.py  inserter.py  model.py  people_model.py  producers_model.py  tables.py
app/routers/v1/: crops_router.py  farms_router.py  payload_examples.py  producers_router.py  schemas.py
app/seeds/: data.py  seeding.py
app/testes/: conftest.py
app/testes/integration/: test_producers_controller.py
app/testes/integration/controllers/: test_crops_controller.py  test_farms_controller.py
app/testes/integration/routers/v1/: test_crops_router.py  test_farms_router.py  test_producers_router.py
app/testes/unit/models/: test_crops_model.py  test_farms_model.py  test_people_model.py
docker/: Dockerfile  Dockerfile-local
iac/: api_gateway.tf  db_instance.tf  ecr_build.tf  iam.tf  lambda.tf  main.tf  names.tf  network.tf  secrets_manager.tf  tags.tf  terraform.tf  variables.tf
