
[tool.poetry]
name = "Serasa Service"
version = "0.1.0"
description = "Serasa Service: Manager Serasa data"
authors = ["Jailson Boa Morte <jailsonboamorte@gmail.com.br>"]
package-mode = false

[tool.poetry.dependencies]
alembic = "1.13.2"
boto3 = "1.38.43"
fastapi = { extras = ["standard"], version = "0.116.1" }
mangum = "0.19.0"
multipart = "1.1.0"
PyJWT = "2.10.1"
psycopg2-binary = "2.9.10"
python = "~3.12"
python-multipart = "0.0.18"
sqlalchemy = "2.0.34"

[tool.poetry.dev-dependencies]
black = "24.8.0"
faker = "30.6.0"
flake8 = "7.1.1"
joserfc = "1.0.4"
moto = "5.0.24"
pytest = "8.3.2"
pytest-ruff = "0.4.1"
pytest-schema = "0.1.2"
ruff = "0.6.5"


[tool.ruff]
exclude = ["alembic"]
